--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -26,15 +26,24 @@ log4j.appender.stdout.layout.ConversionPattern=[%-5p %-d{yyyy-MM-dd HH:mm:ss,SSS
 #log4j.logger.org.hibernate=DEBUG
 #log4j.logger.org.logicalcobwebs=WARN
 
+# channelConfig
+#log4j.logger.org.jboss.netty.channel.DefaultServerChannelConfig=DEBUG
+#log4j.logger.org.jboss.netty.channel.DefaultChannelConfig=DEBUG
+
 # channel的创建
-#log4j.logger.org.jboss.netty.channel.socket.nio.NioServerSocketChannel=ERROR
-#log4j.logger.org.jboss.netty.channel.socket.nio.NioAcceptedSocketChannel=ERROR
+#log4j.logger.org.jboss.netty.channel.socket.nio.NioServerSocketChannel=DEBUG
+#log4j.logger.org.jboss.netty.channel.socket.nio.NioAcceptedSocketChannel=DEBUG
 
 # channels触发event
-#log4j.logger.org.jboss.netty.channel.Channels=ERROR
+#log4j.logger.org.jboss.netty.channel.Channels=DEBUG
 
 # pipeline传输event
-#log4j.logger.org.jboss.netty.channel.StaticChannelPipeline=ERROR
+#log4j.logger.org.jboss.netty.channel.StaticChannelPipeline=DEBUG
+#log4j.logger.org.jboss.netty.channel.DefaultChannelPipeline=DEBUG
+
+# handler收到event
+#log4j.logger.org.jboss.netty.channel.SimpleChannelUpstreamHandler=DEBUG
+#log4j.logger.org.jboss.netty.util.DummyHandler=DEBUG
 
 #New I/O server boss
-#log4j.logger.org.jboss.netty.channel.socket.nio.NioServerSocketPipelineSink=ERROR
+#log4j.logger.org.jboss.netty.channel.socket.nio.NioServerSocketPipelineSink=DEBUG
