--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -27,23 +27,31 @@ log4j.appender.stdout.layout.ConversionPattern=[%-5p %-d{yyyy-MM-dd HH:mm:ss,SSS
 #log4j.logger.org.logicalcobwebs=WARN
 
 # channelConfig
-#log4j.logger.org.jboss.netty.channel.DefaultServerChannelConfig=DEBUG
-#log4j.logger.org.jboss.netty.channel.DefaultChannelConfig=DEBUG
+#log4j.logger.org.jboss.netty.channel.DefaultServerChannelConfig=ERROR
+#log4j.logger.org.jboss.netty.channel.DefaultChannelConfig=ERROR
 
 # channel的创建
-#log4j.logger.org.jboss.netty.channel.socket.nio.NioServerSocketChannel=DEBUG
-#log4j.logger.org.jboss.netty.channel.socket.nio.NioAcceptedSocketChannel=DEBUG
+#log4j.logger.org.jboss.netty.channel.socket.nio.NioServerSocketChannel=ERROR
+#log4j.logger.org.jboss.netty.channel.socket.nio.NioAcceptedSocketChannel=ERROR
 
 # channels触发event
-#log4j.logger.org.jboss.netty.channel.Channels=DEBUG
+#log4j.logger.org.jboss.netty.channel.Channels=ERROR
 
 # pipeline传输event
-#log4j.logger.org.jboss.netty.channel.StaticChannelPipeline=DEBUG
-#log4j.logger.org.jboss.netty.channel.DefaultChannelPipeline=DEBUG
+#log4j.logger.org.jboss.netty.channel.StaticChannelPipeline=ERROR
+#log4j.logger.org.jboss.netty.channel.DefaultChannelPipeline=ERROR
 
 # handler收到event
-#log4j.logger.org.jboss.netty.channel.SimpleChannelUpstreamHandler=DEBUG
-#log4j.logger.org.jboss.netty.util.DummyHandler=DEBUG
+#log4j.logger.org.jboss.netty.bootstrap.ServerBootstrap$Binder=ERROR
+#log4j.logger.org.jboss.netty.channel.SimpleChannelUpstreamHandler=ERROR
+#log4j.logger.org.jboss.netty.util.DummyHandler=ERROR
 
-#New I/O server boss
-#log4j.logger.org.jboss.netty.channel.socket.nio.NioServerSocketPipelineSink=DEBUG
+# bootstrap
+#log4j.logger.org.jboss.netty.bootstrap.Bootstrap=ERROR
+#log4j.logger.org.jboss.netty.bootstrap.ServerBootstrap=ERROR
+
+# New I/O server boss
+#log4j.logger.org.jboss.netty.channel.socket.nio.NioServerSocketPipelineSink=ERROR
+
+# Worker
+#log4j.logger.org.jboss.netty.channel.socket.nio.NioWorker=ERROR
