0006 NioWorker加入线程池

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -45,6 +45,7 @@ log4j.appender.stdout.layout.ConversionPattern=[%-5p %-d{yyyy-MM-dd HH:mm:ss,SSS
 #log4j.logger.org.jboss.netty.bootstrap.ServerBootstrap$Binder=ERROR
 #log4j.logger.org.jboss.netty.channel.SimpleChannelUpstreamHandler=ERROR
 #log4j.logger.org.jboss.netty.util.DummyHandler=ERROR
+#log4j.logger.org.jboss.netty.bootstrap.AbstractSocketServerBootstrapTest$ParentChannelHandler=ERROR
 
 # bootstrap
 #log4j.logger.org.jboss.netty.bootstrap.Bootstrap=ERROR
