--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -54,5 +54,8 @@ log4j.appender.stdout.layout.ConversionPattern=[%-5p %-d{yyyy-MM-dd HH:mm:ss,SSS
 # New I/O server boss
 #log4j.logger.org.jboss.netty.channel.socket.nio.NioServerSocketPipelineSink=ERROR
 
+# 自适应缓冲区
+#log4j.logger.org.jboss.netty.channel.AdaptiveReceiveBufferSizePredictor=ERROR
+
 # Worker
 #log4j.logger.org.jboss.netty.channel.socket.nio.NioWorker=ERROR
