0012 nio client boss worker

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -57,5 +57,6 @@ log4j.appender.stdout.layout.ConversionPattern=[%-5p %-d{yyyy-MM-dd HH:mm:ss,SSS
 # 自适应缓冲区
 #log4j.logger.org.jboss.netty.channel.AdaptiveReceiveBufferSizePredictor=ERROR
 
-# Worker
+# client boss worker
+#log4j.logger.org.jboss.netty.channel.socket.nio.NioClientSocketPipelineSink=ERROR
 #log4j.logger.org.jboss.netty.channel.socket.nio.NioWorker=ERROR
