0014 NioServerSocketChannel close, 线程隔离

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -57,6 +57,7 @@ log4j.appender.stdout.layout.ConversionPattern=[%-5p %-d{yyyy-MM-dd HH:mm:ss,SSS
 # 自适应缓冲区
 #log4j.logger.org.jboss.netty.channel.AdaptiveReceiveBufferSizePredictor=ERROR
 
-# client boss worker
+# boss worker
+#log4j.logger.org.jboss.netty.channel.socket.nio.NioServerSocketPipelineSink=ERROR
 #log4j.logger.org.jboss.netty.channel.socket.nio.NioClientSocketPipelineSink=ERROR
 #log4j.logger.org.jboss.netty.channel.socket.nio.NioWorker=ERROR
